package/objects/sfqz__Quiz_Player__c/fields/sfqz__Email__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>