package/objects/sfqz__Quiz_Player__c/fields/sfqz__Ranking__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Ranking__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>