package/objects/sfqz__Quiz_Player__c/fields/sfqz__Score__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>