package/objects/sfqz__Quiz_Player__c/listViews/sfqz__All.listView-meta.xml
<ListView>
    <fullName>sfqz__All</fullName>
    <columns>NAME</columns>
    <columns>sfqz__Score__c</columns>
    <columns>sfqz__Ranking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>